<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="60dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:id="@+id/plant"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/plant"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/plantName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:ems="7"
            android:text="@string/plant_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            tools:text="Plant Name"
            android:textSize="20sp"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp"
            android:padding="5dp">


        <TextView
            android:id="@+id/section"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/section"
            android:textSize="22sp"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/sectionSelector"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp"
            android:padding="5dp">
        <TextView
            android:id="@+id/shift"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/shift"
            android:textSize="22sp"
            android:textStyle="bold"
           />

        <Spinner
            android:id="@+id/shiftSelector"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
             />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/date"
                android:textSize="22sp"
                android:textStyle="bold"
                />

            <EditText
                android:layout_width="0dp"
                android:paddingLeft="10dp"
                android:ems="10"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:id="@+id/getDate"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calander"
                android:id="@+id/getDate2"/>
        </LinearLayout>

    <Button
        android:id="@+id/form_sumbit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/getEmployee"
        android:layout_marginBottom="25dp"/>


</LinearLayout>